--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -19,7 +19,7 @@
         <div class="p-4 sm:p-6">
             <div class="flex flex-col md:flex-row items-center md:items-start gap-6 md:gap-8">
                 <div class="relative flex-shrink-0">
-                    <img src="{{ user.profile_image or url_for('static', filename='default_profile.png') }}" 
+                    <img src="{{ profile_image_url }}" 
                          alt="Profile Image" 
                          class="w-32 h-32 sm:w-36 sm:h-36 md:w-40 md:h-40 rounded-full border-4 border-pink-300 shadow-lg object-cover 
                                 transform hover:scale-105 transition-transform duration-300">
