--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <title>{% block title %}School Project{% endblock %}</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='logo/logo_mtv.ico') }}">
   <script>
     function toggleMenu() {
       const menu = document.getElementById('mobileMenu');
