--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,7 @@
   </script>
 
   <!-- ไอคอนสำหรับ iOS -->
-  <link rel="apple-touch-icon" sizes="512x512" href="{{ url_for('static', filename='logo/logo_mtv.png') }}">
+  <link rel="apple-touch-icon" sizes="512x512" href="{{ url_for('static', filename='logo/mukhtari_icon_2d.png') }}">
 
   <!-- Meta Tags สำหรับมือถือ -->
   <meta name="mobile-web-app-capable" content="yes">
